Fix dark mode stat text color

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -802,6 +802,10 @@
                 color: var(--bodyTextColorWhite);
             }
 
+            .cs-number {
+                color: var(--bodyTextColorWhite);
+            }
+
             .cs-text,
             .cs-h3 {
                 opacity: 0.8;
